<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="CO2sub">CO<sub>2</sub></string>
    <!-- action bar menu -->
    <string name="menuHelp">Help</string>
    <string name="menuHome">Home</string>
    <string name="app_name">Cycle Credits</string>
    <string name="hello_world">Welcome to Cycle Credits</string>
    <string name="action_settings">Settings</string>
    

    <!-- home screen -->
    <string name="addARouteLbl">Add Route</string>
    <string name="searchRouteLbl">Map Route</string>
    <string name="carbonCreditsLbl">C02 Saved</string>
    <string name="homeDividerText">Recently added Routes</string>
    <string name="homeEmptyMessage">No route\'s added, add a new Route!</string>
    <string name="title_activity_home">Home</string>

    <!-- list view -->
    <string name="homeListDate">Date</string>
    <string name="homeListDistance">Distance</string>
    <string name="homeListCo2">CO2</string>
    <string name="deleteImageDescription">X for delete</string>

    <!-- car picker screen -->
    <string name="spinnerMessage">Please pick a car co2 Band</string>
    <string name="radioGroupSelect">Select a car Co2 Band</string>
    <string name="a1Selected">A1</string>
    <string name="a2Selected">A2</string>
    <string name="a3Selected">A3</string>
    <string name="a4Selected">A4</string>
    <string name="b1Selected">B1</string>
    <string name="b2Selected">B2</string>
    <string name="cSelected">C</string>
    <string name="dSelected">D</string>
    <string name="eSelected">E</string>
    <string name="fSelected">F</string>
    <string name="gSelected">G</string>
    <string name="title_activity_help">Help</string>

    <!-- help screen -->
    <string name="helpHeading">To find CO2 Band Check Tax Disk</string>
    <string name="helpSubHeading">Cars registered on or after 1 July 2008 only</string>
    <string name="helpImgDesc">Tax Disk Image</string>
    <string name="helpDividerText">CO2 Bands and Annual Car Tax</string>
    <string name="helpA1">A1 €170</string>
    <string name="helpA2">A2 €180</string>
    <string name="helpA3">A3 €190</string>
    <string name="helpA4">A4 €200</string>
    <string name="helpB1">B1 €270</string>
    <string name="helpB2">B2 €280</string>
    <string name="helpC"> C €390</string>
    <string name="helpD"> D €570</string>
    <string name="helpE"> E €750</string>
    <string name="helpF"> F €1200</string>
    <string name="helpG"> G €2350</string>

    <!-- add route -->
    <string name="title_activity_add">Add Route</string>
    <string name="addDateLabel">Date:</string>
    <string name="addDistanceLabel">Distance:</string>
    <string name="addCo2BandLabel">Co2Band:</string>
    <string name="dateInputHint">Route Date</string>
    <string name="co2BandInputHint">Car co2 Band</string>
    <string name="addNewRouteBtb">Add Route</string>
    <string name="addBandPrompt">Select co2Band</string>
    <string name="addDistanceHint">km only</string>

    <string-array name="co2Band_array">
        <item>A1</item>
        <item>A2</item>
        <item>A3</item>
        <item>A4</item>
        <item>B1</item>
        <item>B2</item>
        <item>C</item>
        <item>D</item>
        <item>E</item>
        <item>F</item>
        <item>G</item>
    </string-array>

    <!-- edit route -->
    <string name="title_activity_edit">Edit Route</string>
    <string name="editRouteBtn">Edit</string>

    <!-- totals -->
    <string name="title_activity_totals">Totals</string>
    <string name="totalHeading">CO2 Savings</string>
    <string name="totalDistanceLabel">Total Distance:</string>
    <string name="zeroValue">€0.0</string>
    <string name="zeroValuekm">0.0 km</string>
    <string name="zeroValuekg">0.0 kg</string>
    <string name="totalCo2Label">Co2 Savings:</string>
    <string name="totalValueLabel">Value:</string>
    <string name="totalDividerText">Move slider to change carbon credits value</string>
    <string name="totalCCValue">€7/tonne</string>

    <!-- map -->
    <string name="title_activity_map">Map</string>

    <!-- map menu -->
    <string name="mNormal">Normal map</string>
    <string name="mSatellite">Satellite map</string>
    <string name="mTerrain">Terrain map</string>
    <string name="mHybrid">Hybrid map</string>
    <string name="mCurrentLocation">Current Location</string>
    <string name="trackRouteBtnOff">Track Route</string>
    <string name="trackRouteBtnOn">Stop Tracking</string>
    <string name="saveMapRouteBtn">Save</string>
    
    <!-- login -->
    <string name="title_activity_login">Login</string>
    <string name="menuLogout">Logout</string>
    <string name="LoginHeading">Login to Cycle Credits</string>
    <string name="loginEmail">Email:</string>
    <string name="loginPassword">Password:</string>
    <string name="loginTextBtn">Login</string>
    <!-- hints include actual values for demo purposes only -->
    <string name="loginPasswordHint">Password = p</string>
    <string name="loginEmailHint">Email = p@p.com</string>
    

</resources>
