<?xml version="1.0" encoding="utf-8"?>
<LinearLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/appLayoutTheme"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >
    
    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal|center_vertical"
        android:orientation="horizontal"
        android:padding="10dp" >

	    <Button
	        android:id="@+id/addARouteBtn"
	        style="@android:style/Holo.Light.ButtonBar"
	        android:layout_width="99dp"
	        android:layout_height="120dp"
	        android:layout_margin="2dp"
	        android:drawableTop="@drawable/new_route"
	        android:text="@string/addARouteLbl" />
	
	    <Button
	        android:id="@+id/searchRoutesBtn"
	        style="@android:style/Holo.Light.ButtonBar"
	        android:layout_width="99dp"
	        android:layout_height="120dp"
	        android:layout_margin="2dp"
	        android:drawableTop="@drawable/search_route"
	        android:text="@string/searchRouteLbl" />
	    
	    <Button
	        android:id="@+id/carbonCreditsBtn"
	        style="@android:style/Holo.Light.ButtonBar"
	        android:layout_width="99dp"
	        android:layout_height="120dp"
	        android:layout_margin="2dp"
	        android:drawableTop="@drawable/carbon_footprint"
	        android:text="@string/carbonCreditsLbl" />
	    
	</LinearLayout>

    <TextView
        android:id="@+id/textViewDivider"
        style="@style/banner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/homeDividerText" />

    <TextView
        android:id="@+id/homeTableHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/homeTableDistance" />

    <RelativeLayout
        android:layout_width="fill_parent" 
        android:layout_height="fill_parent">

	    <ListView
	        android:id="@android:id/list"
	        android:layout_width="fill_parent"
	        android:layout_height="fill_parent"
	        android:layout_alignParentLeft="true"
	        android:layout_alignParentStart="true" />

	    
        
    </RelativeLayout>

</LinearLayout>