<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="wit.cc.Totals" >

    <TextView
        android:id="@+id/totalHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/totalHeading"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/totalDistanceLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/totalHeader"
        android:layout_alignStart="@+id/totalHeader"
        android:layout_below="@+id/totalHeader"
        android:layout_marginTop="30dp"
        android:text="@string/totalDistanceLabel"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/totalDistance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/totalDistanceLabel"
        android:layout_alignBottom="@+id/totalDistanceLabel"
        android:layout_marginLeft="58dp"
        android:layout_marginStart="50dp"
        android:layout_toRightOf="@+id/totalDistanceLabel"
        android:layout_toEndOf="@+id/totalDistanceLabel"
        android:text="@string/zeroValue" 
        android:textSize="15sp"/>

</RelativeLayout>