<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >
    
    <TextView
            android:id="@+id/addRouteDatelabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="20dp"
            android:text="@string/addDateLabel" />

        <EditText
            android:id="@+id/newDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/addRouteDatelabel"
            android:layout_alignBottom="@+id/addRouteDatelabel"
            android:layout_marginLeft="40dp"
            android:layout_marginStart="40dp"
            android:layout_toEndOf="@+id/addRouteDatelabel"
            android:layout_toRightOf="@+id/addRouteDatelabel"
            android:ems="10"
            android:inputType="date" />

        <TextView
            android:id="@+id/addRouteDistanceLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/addRouteDatelabel"
            android:layout_alignStart="@+id/addRouteDatelabel"
            android:layout_below="@+id/addRouteDatelabel"
            android:layout_marginTop="40dp"
            android:text="@string/addDistanceLabel" />

        <EditText
            android:id="@+id/newDistance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/addRouteDistanceLabel"
            android:layout_alignBottom="@+id/addRouteDistanceLabel"
            android:layout_alignLeft="@+id/newDate"
            android:layout_alignStart="@+id/newDate"
            android:ems="10"
            android:inputType="numberDecimal" />

        <TextView
            android:id="@+id/addRouteCo2Bandlabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/addRouteDistanceLabel"
            android:layout_alignStart="@+id/addRouteDistanceLabel"
            android:layout_below="@+id/newDistance"
            android:layout_marginTop="40dp"
            android:text="@string/addCo2BandLabel" />

        <EditText
            android:id="@+id/newCo2Band"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/addRouteCo2Bandlabel"
            android:layout_alignBottom="@+id/addRouteCo2Bandlabel"
            android:layout_alignLeft="@+id/newDistance"
            android:layout_alignStart="@+id/newDistance"
            android:ems="10"
            android:hint="@string/co2BandInputHint" />

        <Button
            android:id="@+id/addNewRouteBtn"
            style="@android:style/Holo.Light.ButtonBar"
            android:layout_width="99dp"
            android:layout_height="120dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_margin="2dp"
            android:layout_marginBottom="75dp"
            android:drawableTop="@drawable/new_route"
            android:text="@string/addNewRouteBtb" 
            android:onClick="addRoute"/>

</RelativeLayout>