<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="wit.cc.Edit" >
    
    <TextView
            android:id="@+id/editRouteDatelabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="30dp"
            android:text="@string/addDateLabel" />

        <EditText
            android:id="@+id/editDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/editRouteDatelabel"
            android:layout_alignBottom="@+id/editRouteDatelabel"
            android:layout_marginLeft="40dp"
            android:layout_marginStart="40dp"
            android:layout_toEndOf="@+id/editRouteDatelabel"
            android:layout_toRightOf="@+id/editRouteDatelabel"
            android:ems="10"
            android:inputType="date" />
        
        <TextView
            android:id="@+id/editRouteDistanceLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/editRouteDatelabel"
            android:layout_alignStart="@+id/editRouteDatelabel"
            android:layout_below="@+id/editRouteDatelabel"
            android:layout_marginTop="40dp"
            android:text="@string/addDistanceLabel" />

        <EditText
            android:id="@+id/editDistance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/editRouteDistanceLabel"
            android:layout_alignBottom="@+id/editRouteDistanceLabel"
            android:layout_alignLeft="@+id/editDate"
            android:layout_alignStart="@+id/editDate"
            android:ems="10"
            android:inputType="numberDecimal" />
        
         <TextView
            android:id="@+id/editRouteCo2Bandlabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/editRouteDistanceLabel"
            android:layout_alignStart="@+id/editRouteDistanceLabel"
            android:layout_below="@+id/editDistance"
            android:layout_marginTop="40dp"
            android:text="@string/addCo2BandLabel" />
         
         <EditText
            android:id="@+id/editBand"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/editRouteCo2Bandlabel"
            android:layout_alignBottom="@+id/editRouteCo2Bandlabel"
            android:layout_alignLeft="@+id/editDistance"
            android:layout_alignStart="@+id/editDistance"
            android:ems="10" 
            android:hint="@string/addBandPrompt"/>
         
         <Button
            android:id="@+id/editRouteBtn"
            style="@android:style/Holo.Light.ButtonBar"
            android:layout_width="99dp"
            android:layout_height="120dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_margin="2dp"
            android:layout_marginBottom="75dp"
            android:drawableTop="@drawable/new_route"
            android:text="@string/editRouteBtn" 
            android:onClick="update"/>

</RelativeLayout>
